--- a/views/common/loginform.pug
+++ b/views/common/loginform.pug
@@ -1,6 +1,10 @@
+
 mixin login(login)
-    .d-flex.justify-content-center
-        form.row(method='POST', action='/login', autocomplete='off')
-            input.col(type='text',placeholder='User',name='user' required)
-            input.col(type='text',placeholder='Password',name='pass' required)
-            input.col(type='submit', name='submit', value='Submit')
+    .container
+        form(method='POST', action='/login', autocomplete='off')
+            .col-sm-7
+                input.form-control(type='text',placeholder='User',name='user' required class= valid)
+            .col-sm-7
+                input.form-control(type='password',placeholder='Password',name='pass' required class= valid)
+            .col-sm-7
+                input.form-control(type='submit', name='submit', value='Submit')
